# fortiparse

./: README.md  __init__.py  __main__.py  fortigate_parse.py  fortiparse.py  pyproject.toml  pytest.ini  setup.py  tox.ini
examples/: parse_fortigate_config.py  sample_config.txt  simple_config.txt
tests/: __init__.py  conftest.py  requirements-dev.txt  requirements.txt  test_advanced.py  test_cli.py  test_fortiparse.py
