[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortiparse"
version = "0.1.0"
description = "A Python library to parse FortiGate configuration files into JSON format"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
fortiparse = "fortiparse.fortiparse:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"